# Calc

./: CMakeLists.txt  Calc.c  Example.cpp  README.md
example/: Example.c
include/: Calc.h
src/: Calc.c
